--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "helmet": "^4.1.1",
     "knex": "^0.21.12",
     "morgan": "^1.10.0",
-    "pg": "^8.4.2",
+    "pg": "^8.5.0",
+    "postgrator": "^4.1.1",
     "postgrator-cli": "^4.0.0",
     "uuid": "^8.3.1",
     "valid-url": "^1.0.9",
